@@ -1,2 +1,65 @@
 # EnergyManagementSystem
+In this project, user can calculate gas bills and elecricity bills. User can also calculate the real time gas consumption graphs. User can also generate the invoices.
 Design, implement and test a management system for an energy supplier using object-oriented principles in Java FX.  Design should include class diagrams. Testing should include both white box (JUnit tests) and black box (test logs). 
+
+## Screen (UI)
+
+### Login Page
+![image](https://user-images.githubusercontent.com/63167737/235357811-aeaef0e2-ead1-4068-9173-b3b71c5fddc1.png)
+
+### Welcome Page
+![image](https://user-images.githubusercontent.com/63167737/235357746-dfccd244-d8f6-49eb-bf45-a34ee27c5505.png)
+
+### Dashboard Page
+![image](https://user-images.githubusercontent.com/63167737/235357837-e059be67-fb00-437e-a67b-4b459dd0e6c3.png)
+
+### Profile Page
+![image](https://user-images.githubusercontent.com/63167737/235357946-0f0abb7d-0574-4e49-bfa3-4af30da5443a.png)
+
+### Adding Customer
+![image](https://user-images.githubusercontent.com/63167737/235357900-c8744745-53bb-4074-ada3-0a56cd6bf54b.png)
+
+### Energy Bill
+![image](https://user-images.githubusercontent.com/63167737/235357986-29067bee-f78c-4b33-948f-b5b77fc3526e.png)
+
+### Gas Bill
+![image](https://user-images.githubusercontent.com/63167737/235358016-1183b7f4-fc05-4c33-a3e6-b075b130f5c1.png)
+
+### Gas Bill Statement
+![image](https://user-images.githubusercontent.com/63167737/235358071-2c6034ed-d23e-43ce-a33d-ff024b30c79c.png)
+
+### Electricity Bill 
+![image](https://user-images.githubusercontent.com/63167737/235358130-5a353ea9-0d22-4a26-9e1b-f8656e2e6f86.png)
+
+### Electricity Bill Statement
+![image](https://user-images.githubusercontent.com/63167737/235358138-35596c17-ef59-4936-bfb3-6fa4333b648d.png)
+
+### Payment
+![image](https://user-images.githubusercontent.com/63167737/235358168-d7af5e45-f803-465a-814e-76db6936fe3d.png)
+
+### Real Time Graph
+![image](https://user-images.githubusercontent.com/63167737/235358182-b836c761-3bd3-42b9-81af-cfa4e0f588f8.png)
+
+### Invoices
+![image](https://user-images.githubusercontent.com/63167737/235358196-ab2cd00e-b38a-467b-b132-62fad9de1fa1.png)
+
+## Testing 
+
+### White Box Testing
+![image](https://user-images.githubusercontent.com/63167737/235359355-3fcdd10d-9be9-4054-b533-9478ffcb59e9.png)
+![image](https://user-images.githubusercontent.com/63167737/235359360-1710117c-2364-4b01-9d2c-bddc694ab8d8.png)
+
+
+
+## Run Project
+- Open the project in the eclipse
+- Add the Javafx jars in the build path
+- Add ojdbc jar in the build path
+- Make sure you have installed the oracle in your system
+- Add VM arguments in the main class
+```
+--module-path "J:\javafx-sdk-17.0.1\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml
+```
+
+## Contributions
+Contributions are welcome! If you find a bug or have a suggestion, please open an issue or submit a pull request.
